--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
 body {
     font-size: 20px;
-    background: linear-gradient(#74064e, #2a10f1);
+    background: linear-gradient(to left,#74064e, #2a10f1);
 }
